auto-test/tests/chapter_18/invalid_struct_tags/extra_credit/var_undeclared_union_type.c
int main(void) {
    
    
    
    

    union s var;
    return 0;
}